apps/glitchtip/k8s/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-postgres
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-postgres
  template:
    metadata:
      labels:
        app: glitchtip-postgres
        tier: db
    spec:
      containers:
        - name: postgres
          image: "postgres:18-alpine@sha256:d3e1620b530c944afa6e887d22eb899824da68e19c52024bf98f5220c88a65b2"
          readinessProbe:
            exec:
              command: ["pg_isready", "-d", "glitchtip", "-U", "glitchtip"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            exec:
              command: ["pg_isready", "-d", "glitchtip", "-U", "glitchtip"]
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            runAsUser: 70
            runAsGroup: 70
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/glitchtip/postgresql
            type: Directory
