apps/glitchtip/k8s/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-postgres
spec:
  type: ClusterIP
  selector:
    app: glitchtip-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
