apps/glitchtip/k8s/valkey.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-valkey
spec:
  type: ClusterIP
  selector:
    app: glitchtip-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
      protocol: TCP
