apps/glitchtip/k8s/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip
  namespace: glitchtip
spec:
  type: ClusterIP
  selector:
    app: glitchtip
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
