apps/glitchtip/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glitchtip
  namespace: glitchtip
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - glitchtip.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: glitchtip
          port: 80
